--- a/pages/styles/index.css
+++ b/pages/styles/index.css
@@ -33,7 +33,7 @@
 }
 
 .index-table-wraper {
-    overflow: scroll;
+    overflow-x: scroll;
 }
 
 @media only screen and (max-width:700px) {
