--- a/pages/styles/view.css
+++ b/pages/styles/view.css
@@ -1,11 +1,26 @@
 .view-container {
+    min-height: calc(100vh - 100px - 62px);
+    width: 100vw;
+    background: #e6e6e6e6;
+    padding: 20px;
+}
+
+.view-container>.container {
+    min-width: 320px;
+    width: 400px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
 }
 
 .view-head {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
+    padding: 0 0 20px 0;
+}
+
+.view-table-wraper {
+    width: calc(100% - 20px);
+    overflow: auto;
 }
